--- a/include/nav_cr.html
+++ b/include/nav_cr.html
@@ -32,6 +32,7 @@
             <li><a href="./customer_mailing.jsp">Customer mailing lists</a></li>
             <li><a href="./listSuggestion.jsp">Item suggestions</a></li>
             <li><a href="./view_employee.jsp">View Employee Information</a></li>
+            <li><a href="./view_employee_sales.jsp">View All Sales</a></li>
           
           </ul>
           <ul class="nav nav-sidebar">
