--- a/include/nav_customer.html
+++ b/include/nav_customer.html
@@ -35,6 +35,8 @@
             <li><a href="./Item_By_Keyword.jsp">Items Available with Particular Keyword</a></li>
             <li><a href="./Best_Seller_list.jsp">Best-Seller List</a></li>
             <li><a href="./Item_Suggestion_List.jsp">Item Suggestion List</a></li>
+            <li><a href="./Create_Auction.jsp">Create Auction</a></li>
+            <li><a href="./Buy_Item.jsp?by=Name">Search Item</a></li>
           </ul>
           <ul class="nav nav-sidebar">
             <!--<li><a href="./manager_cr_most_revenue.jsp">Customer Representative generated most total revenue</a></li>
